[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listingtool"
version = "0.1.0"
description = "List exported native function symbols from Linux .so files"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
listingtool = "listingtool.__main__:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
